force-app/main/default/objects/AVA_B2BLEX__AvaTaxSettings__c/AVA_B2BLEX__AvaTaxSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>AvaTax Settings</label>
</CustomObject>