force-app/main/default/objects/AVA_B2BLEX__AvaTaxSettings__c/fields/AVA_B2BLEX__AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__AccountNumber__c</fullName>
    <label>Account Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>