force-app/main/default/objects/AVA_B2BLEX__AvaTaxSettings__c/fields/AVA_B2BLEX__City__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__City__c</fullName>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>