force-app/main/default/objects/AVA_B2BLEX__AvaTaxSettings__c/fields/AVA_B2BLEX__CompanyCode__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__CompanyCode__c</fullName>
    <label>Company Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>