force-app/main/default/objects/AVA_B2BLEX__AvaTaxSettings__c/fields/AVA_B2BLEX__EnableAddressValidation__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__EnableAddressValidation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Address Validation</label>
    <type>Checkbox</type>
</CustomField>