force-app/main/default/objects/AVA_B2BLEX__AvaTaxSettings__c/fields/AVA_B2BLEX__LicenseKey__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__LicenseKey__c</fullName>
    <label>License Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>