force-app/main/default/objects/AVA_B2BLEX__AvaTaxSettings__c/fields/AVA_B2BLEX__Sandbox__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__Sandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sandbox</label>
    <type>Checkbox</type>
</CustomField>