force-app/main/default/objects/AVA_B2BLEX__AvaTaxSettings__c/fields/AVA_B2BLEX__SaveToAvaTax__c.field-meta.xml
<CustomField>
    <fullName>AVA_B2BLEX__SaveToAvaTax__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Save Transaction to AvaTax</label>
    <type>Checkbox</type>
</CustomField>